Implemented Exception Handling and Updated Service Tests