@@ -1,301 +1,372 @@
 package com.ust.pos;
 
 import com.ust.pos.dto.StockDto;
+import com.ust.pos.dto.WsDto;
 import com.ust.pos.exception.ResourceNotFoundException;
 import com.ust.pos.model.*;
 import com.ust.pos.stock.service.impl.StockServiceImpl;
-import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.modelmapper.ModelMapper;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
+import org.springframework.data.jpa.domain.Specification;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.eq;
+import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
 class StockServiceTest {
 
-    @InjectMocks
-    private StockServiceImpl stockService;
-
+    private static final Long PRODUCT_ID = 1L;
+    private static final Long WAREHOUSE_ID = 2L;
+    private static final Long STOCK_ID = 10L;
     @Mock
     private StockRepository stockRepository;
-
     @Mock
     private ProductRepository productRepository;
-
     @Mock
     private WarehouseRepository warehouseRepository;
-
     @Mock
     private ModelMapper modelMapper;
+    @InjectMocks
+    private StockServiceImpl service;
+
+    private Product product() {
+        Product p = new Product();
+        p.setId(PRODUCT_ID);
+        p.setProductName("Laptop");
+        p.setIdentifier("SKU001");
+        return p;
+    }
+
+    private Warehouse warehouse() {
+        Warehouse w = new Warehouse();
+        w.setId(WAREHOUSE_ID);
+        w.setName("Warehouse-A");
+        return w;
+    }
+
+    private Stock stock() {
+        Stock s = new Stock();
+        s.setId(STOCK_ID);
+        s.setProductId(PRODUCT_ID);
+        s.setWarehouseId(WAREHOUSE_ID);
+        s.setStatus(true);
+        return s;
+    }
 
     @Test
-    void createStockSuccessTest() {
+    void createStockSuccess() {
+
         StockDto dto = new StockDto();
-        dto.setProductId(1L);
-        dto.setWarehouseId(2L);
 
-        Product product = new Product();
-        product.setProductName("Samsung");
-        product.setIdentifier("SKU001");
+        dto.setProductId(PRODUCT_ID);
+        dto.setWarehouseId(WAREHOUSE_ID);
 
-        Warehouse warehouse = new Warehouse();
-        warehouse.setName("Main Warehouse");
+        when(productRepository.findById(PRODUCT_ID)).thenReturn(Optional.of(product()));
 
-        Stock stock = new Stock();
+        when(warehouseRepository.findById(WAREHOUSE_ID)).thenReturn(Optional.of(warehouse()));
 
-        Mockito.when(productRepository.findById(1L)).thenReturn(Optional.of(product));
-        Mockito.when(warehouseRepository.findById(2L)).thenReturn(Optional.of(warehouse));
-        Mockito.when(stockRepository.existsByProductIdAndWarehouseId(1L, 2L)).thenReturn(false);
-        Mockito.when(modelMapper.map(dto, Stock.class)).thenReturn(stock);
+        when(stockRepository.existsByProductIdAndWarehouseId(PRODUCT_ID, WAREHOUSE_ID)).thenReturn(false);
 
-        StockDto response = stockService.createStock(dto);
+        when(modelMapper.map(dto, Stock.class)).thenReturn(new Stock());
 
-        Assertions.assertEquals("Samsung", response.getProductName());
-        Assertions.assertEquals("Main Warehouse", response.getWarehouseName());
-        Assertions.assertEquals("SKU001", response.getIdentifier());
+        StockDto result = service.createStock(dto);
 
-        Mockito.verify(stockRepository).save(stock);
+        assertEquals("Laptop", result.getProductName());
+
+        assertEquals("Warehouse-A", result.getWarehouseName());
+
+        verify(stockRepository).save(any());
+
     }
 
     @Test
-    void createStockProductNotFoundTest() {
+    void createStockAlreadyExists() {
+
         StockDto dto = new StockDto();
-        dto.setProductId(1L);
 
-        Mockito.when(productRepository.findById(1L)).thenReturn(Optional.empty());
+        dto.setProductId(PRODUCT_ID);
+        dto.setWarehouseId(WAREHOUSE_ID);
 
-        ResourceNotFoundException ex = Assertions.assertThrows(ResourceNotFoundException.class, () -> stockService.createStock(dto));
+        when(productRepository.findById(PRODUCT_ID)).thenReturn(Optional.of(product()));
 
-        Assertions.assertEquals("Product with id '1' not found", ex.getMessage());
+        when(warehouseRepository.findById(WAREHOUSE_ID)).thenReturn(Optional.of(warehouse()));
+
+        when(stockRepository.existsByProductIdAndWarehouseId(PRODUCT_ID, WAREHOUSE_ID)).thenReturn(true);
+
+        StockDto result = service.createStock(dto);
+
+        assertFalse(result.isSuccess());
+
+        assertEquals("Stock already exists", result.getMessage());
+
     }
 
     @Test
-    void createStockWarehouseNotFoundTest() {
+    void createStockProductNotFound() {
+
         StockDto dto = new StockDto();
-        dto.setProductId(1L);
-        dto.setWarehouseId(2L);
 
-        Mockito.when(productRepository.findById(1L)).thenReturn(Optional.of(new Product()));
-        Mockito.when(warehouseRepository.findById(2L)).thenReturn(Optional.empty());
+        dto.setProductId(PRODUCT_ID);
 
-        ResourceNotFoundException ex = Assertions.assertThrows(ResourceNotFoundException.class, () -> stockService.createStock(dto));
+        when(productRepository.findById(PRODUCT_ID)).thenReturn(Optional.empty());
 
-        Assertions.assertEquals("Warehouse with id '2' not found", ex.getMessage());
+        assertThrows(ResourceNotFoundException.class, () -> service.createStock(dto));
+
     }
 
     @Test
-    void createStockAlreadyExistsTest() {
+    void createStockWarehouseNotFound() {
+
         StockDto dto = new StockDto();
-        dto.setProductId(1L);
-        dto.setWarehouseId(2L);
 
-        Mockito.when(productRepository.findById(1L)).thenReturn(Optional.of(new Product()));
-        Mockito.when(warehouseRepository.findById(2L)).thenReturn(Optional.of(new Warehouse()));
-        Mockito.when(stockRepository.existsByProductIdAndWarehouseId(1L, 2L)).thenReturn(true);
+        dto.setProductId(PRODUCT_ID);
+        dto.setWarehouseId(WAREHOUSE_ID);
 
-        StockDto response = stockService.createStock(dto);
+        when(productRepository.findById(PRODUCT_ID)).thenReturn(Optional.of(product()));
 
-        Assertions.assertFalse(response.isSuccess());
-        Assertions.assertEquals("Stock already exists", response.getMessage());
+        when(warehouseRepository.findById(WAREHOUSE_ID)).thenReturn(Optional.empty());
+
+        assertThrows(ResourceNotFoundException.class, () -> service.createStock(dto));
+
     }
 
     @Test
-    void updateStockQuantitySuccessTest() {
-        Stock stock = new Stock();
-        stock.setProductId(1L);
-        stock.setWarehouseId(2L);
+    void updateQuantitySuccess() {
 
-        Product product = new Product();
-        product.setProductName("Samsung");
-        product.setIdentifier("SKU001");
+        Stock stock = stock();
 
-        Warehouse warehouse = new Warehouse();
-        warehouse.setName("Main Warehouse");
+        when(stockRepository.findById(STOCK_ID)).thenReturn(Optional.of(stock));
 
-        Mockito.when(stockRepository.findById(1L)).thenReturn(Optional.of(stock));
-        Mockito.when(productRepository.findById(1L)).thenReturn(Optional.of(product));
-        Mockito.when(warehouseRepository.findById(2L)).thenReturn(Optional.of(warehouse));
+        when(productRepository.findById(PRODUCT_ID)).thenReturn(Optional.of(product()));
 
-        Mockito.doAnswer(i -> {
-            Stock s = i.getArgument(0);
-            StockDto d = i.getArgument(1);
-            d.setQuantity(s.getQuantity());
-            d.setProductName(s.getProductName());
-            d.setWarehouseName(s.getWarehouseName());
-            d.setIdentifier(s.getIdentifier());
-            return null;
-        }).when(modelMapper).map(any(Stock.class), any(StockDto.class));
+        when(warehouseRepository.findById(WAREHOUSE_ID)).thenReturn(Optional.of(warehouse()));
 
-        StockDto response = stockService.updateStockQuantity(1L, 10);
+        service.updateStockQuantity(STOCK_ID, 100);
 
-        Assertions.assertEquals(10, response.getQuantity());
-        Assertions.assertEquals("Samsung", response.getProductName());
-        Assertions.assertEquals("Main Warehouse", response.getWarehouseName());
-        Assertions.assertEquals("SKU001", response.getIdentifier());
+        verify(stockRepository).save(stock);
 
-        Mockito.verify(stockRepository).save(stock);
+        verify(modelMapper).map(eq(stock), any(StockDto.class));
+
     }
 
     @Test
-    void updateStockQuantityWithoutProductWarehouseTest() {
-        Stock stock = new Stock();
-        stock.setProductId(1L);
-        stock.setWarehouseId(2L);
+    void updateQuantityWithoutProduct() {
 
-        Mockito.when(stockRepository.findById(1L)).thenReturn(Optional.of(stock));
-        Mockito.when(productRepository.findById(1L)).thenReturn(Optional.empty());
-        Mockito.when(warehouseRepository.findById(2L)).thenReturn(Optional.empty());
+        Stock stock = stock();
 
-        StockDto response = stockService.updateStockQuantity(1L, 5);
+        when(stockRepository.findById(STOCK_ID)).thenReturn(Optional.of(stock));
 
-        Assertions.assertNotNull(response);
+        when(productRepository.findById(PRODUCT_ID)).thenReturn(Optional.empty());
 
-        Mockito.verify(stockRepository).save(stock);
+        when(warehouseRepository.findById(WAREHOUSE_ID)).thenReturn(Optional.empty());
+
+        service.updateStockQuantity(STOCK_ID, 50);
+
+        verify(stockRepository).save(stock);
+
     }
 
     @Test
-    void updateStockQuantityNotFoundTest() {
-        Mockito.when(stockRepository.findById(1L)).thenReturn(Optional.empty());
+    void updateQuantityNotFound() {
 
-        ResourceNotFoundException ex = Assertions.assertThrows(ResourceNotFoundException.class, () -> stockService.updateStockQuantity(1L, 10));
+        when(stockRepository.findById(STOCK_ID)).thenReturn(Optional.empty());
 
-        Assertions.assertEquals("Stock with id '1' not found", ex.getMessage());
+        assertThrows(ResourceNotFoundException.class, () -> service.updateStockQuantity(STOCK_ID, 10));
+
     }
 
     @Test
-    void getStockSuccessTest() {
-        Stock stock = new Stock();
-        stock.setProductId(1L);
-        stock.setWarehouseId(2L);
+    void getStockSuccess() {
 
-        Product product = new Product();
-        product.setProductName("Samsung");
-        product.setIdentifier("SKU001");
+        Stock stock = stock();
 
-        Warehouse warehouse = new Warehouse();
-        warehouse.setName("Main Warehouse");
+        when(stockRepository.findByProductIdAndWarehouseId(PRODUCT_ID, WAREHOUSE_ID)).thenReturn(Optional.of(stock));
 
-        Mockito.when(stockRepository.findByProductIdAndWarehouseId(1L, 2L)).thenReturn(Optional.of(stock));
-        Mockito.when(productRepository.findById(1L)).thenReturn(Optional.of(product));
-        Mockito.when(warehouseRepository.findById(2L)).thenReturn(Optional.of(warehouse));
-        Mockito.doNothing().when(modelMapper).map(any(Stock.class), any(StockDto.class));
+        when(productRepository.findById(PRODUCT_ID)).thenReturn(Optional.of(product()));
 
-        StockDto response = stockService.getStock(1L, 2L);
+        when(warehouseRepository.findById(WAREHOUSE_ID)).thenReturn(Optional.of(warehouse()));
 
-        Assertions.assertEquals("Samsung", response.getProductName());
-        Assertions.assertEquals("Main Warehouse", response.getWarehouseName());
-        Assertions.assertEquals("SKU001", response.getIdentifier());
+        service.getStock(PRODUCT_ID, WAREHOUSE_ID);
+
+        verify(modelMapper).map(eq(stock), any(StockDto.class));
+
     }
 
     @Test
-    void getStockNotFoundTest() {
-        Mockito.when(stockRepository.findByProductIdAndWarehouseId(1L, 2L)).thenReturn(Optional.empty());
+    void getStockWithoutProductWarehouse() {
 
-        ResourceNotFoundException ex = Assertions.assertThrows(ResourceNotFoundException.class, () -> stockService.getStock(1L, 2L));
+        Stock stock = stock();
 
-        Assertions.assertEquals("Stock with productId '1' and warehouseId '2' not found", ex.getMessage());
+        when(stockRepository.findByProductIdAndWarehouseId(PRODUCT_ID, WAREHOUSE_ID)).thenReturn(Optional.of(stock));
+
+        when(productRepository.findById(PRODUCT_ID)).thenReturn(Optional.empty());
+
+        when(warehouseRepository.findById(WAREHOUSE_ID)).thenReturn(Optional.empty());
+
+        StockDto result = service.getStock(PRODUCT_ID, WAREHOUSE_ID);
+
+        assertNotNull(result);
+
     }
 
     @Test
-    void findAllTest() {
+    void getStockNotFound() {
+
+        when(stockRepository.findByProductIdAndWarehouseId(PRODUCT_ID, WAREHOUSE_ID)).thenReturn(Optional.empty());
+
+        assertThrows(ResourceNotFoundException.class, () -> service.getStock(PRODUCT_ID, WAREHOUSE_ID));
+
+    }
+
+    @Test
+    void findAllSuccess() {
+
         Pageable pageable = PageRequest.of(0, 10);
 
-        Stock stock = new Stock();
-        stock.setProductId(1L);
-        stock.setWarehouseId(2L);
-
-        Product product = new Product();
-        product.setProductName("Samsung");
-        product.setIdentifier("SKU001");
-
-        Warehouse warehouse = new Warehouse();
-        warehouse.setName("Main Warehouse");
+        Stock stock = stock();
 
         Page<Stock> page = new PageImpl<>(List.of(stock));
 
-        Mockito.when(stockRepository.findByDeletedFalse(pageable)).thenReturn(page);
-        Mockito.when(modelMapper.map(any(Stock.class), eq(StockDto.class))).thenReturn(new StockDto());
-        Mockito.when(productRepository.findById(1L)).thenReturn(Optional.of(product));
-        Mockito.when(warehouseRepository.findById(2L)).thenReturn(Optional.of(warehouse));
+        when(stockRepository.findByDeletedFalse(pageable)).thenReturn(page);
 
-        List<StockDto> response = stockService.findAll(pageable);
+        when(modelMapper.map(stock, StockDto.class)).thenReturn(new StockDto());
 
-        Assertions.assertEquals(1, response.size());
-        Assertions.assertEquals("Samsung", response.get(0).getProductName());
-        Assertions.assertEquals("Main Warehouse", response.get(0).getWarehouseName());
-        Assertions.assertEquals("SKU001", response.get(0).getIdentifier());
+        when(productRepository.findById(PRODUCT_ID)).thenReturn(Optional.of(product()));
+
+        when(warehouseRepository.findById(WAREHOUSE_ID)).thenReturn(Optional.of(warehouse()));
+
+        WsDto<StockDto> ws = service.findAll(pageable);
+
+        assertEquals(1, ws.getDtoList().size());
+
     }
 
     @Test
-    void findAllEmptyTest() {
+    void findAllEmpty() {
+
         Pageable pageable = PageRequest.of(0, 10);
 
-        Mockito.when(stockRepository.findByDeletedFalse(pageable)).thenReturn(new PageImpl<>(List.of()));
+        Page<Stock> page = new PageImpl<>(Collections.emptyList());
 
-        List<StockDto> response = stockService.findAll(pageable);
+        when(stockRepository.findByDeletedFalse(pageable)).thenReturn(page);
 
-        Assertions.assertTrue(response.isEmpty());
+        WsDto<StockDto> ws = service.findAll(pageable);
+
+        assertEquals(0, ws.getDtoList().size());
+
     }
 
     @Test
-    void deleteStockSuccessTest() {
-        Stock stock = new Stock();
+    void findAllSpecificationSuccess() {
 
-        Mockito.when(stockRepository.findById(1L)).thenReturn(Optional.of(stock));
+        Pageable pageable = PageRequest.of(0, 10);
 
-        boolean response = stockService.deleteStock(1L);
+        Specification<Stock> spec = mock(Specification.class);
 
-        Assertions.assertTrue(response);
+        Stock stock = stock();
 
-        Mockito.verify(stockRepository).save(stock);
+        Page<Stock> page = new PageImpl<>(List.of(stock));
+
+        when(stockRepository.findAll(spec, pageable)).thenReturn(page);
+
+        when(modelMapper.map(stock, StockDto.class)).thenReturn(new StockDto());
+
+        WsDto<StockDto> ws = service.findAll(spec, pageable, "abc");
+
+        assertEquals("abc", ws.getKeyword());
+
     }
 
     @Test
-    void deleteStockNotFoundTest() {
-        Mockito.when(stockRepository.findById(1L)).thenReturn(Optional.empty());
+    void findAllSpecificationEmpty() {
 
-        ResourceNotFoundException ex = Assertions.assertThrows(ResourceNotFoundException.class, () -> stockService.deleteStock(1L));
+        Pageable pageable = PageRequest.of(0, 10);
 
-        Assertions.assertEquals("Stock with id '1' not found", ex.getMessage());
+        Specification<Stock> spec = mock(Specification.class);
 
-        Mockito.verify(stockRepository, Mockito.never()).save(any());
+        Page<Stock> page = new PageImpl<>(Collections.emptyList());
+
+        when(stockRepository.findAll(spec, pageable)).thenReturn(page);
+
+        WsDto<StockDto> ws = service.findAll(spec, pageable, "test");
+
+        assertEquals(0, ws.getDtoList().size());
+
     }
 
     @Test
-    void toggleStatusSuccessTest() {
-        Stock stock = new Stock();
+    void deleteStockSuccess() {
+
+        Stock stock = stock();
+
+        when(stockRepository.findById(STOCK_ID)).thenReturn(Optional.of(stock));
+
+        assertTrue(service.deleteStock(STOCK_ID));
+
+        verify(stockRepository).save(stock);
+
+    }
+
+    @Test
+    void deleteStockNotFound() {
+
+        when(stockRepository.findById(STOCK_ID)).thenReturn(Optional.empty());
+
+        assertThrows(ResourceNotFoundException.class, () -> service.deleteStock(STOCK_ID));
+
+    }
+
+    @Test
+    void toggleStatusTrueFalse() {
+
+        Stock stock = stock();
+
         stock.setStatus(true);
 
-        Mockito.when(stockRepository.findById(1L)).thenReturn(Optional.of(stock));
+        when(stockRepository.findById(STOCK_ID)).thenReturn(Optional.of(stock));
 
-        stockService.toggleStatus(1L);
+        service.toggleStatus(STOCK_ID);
 
-        Assertions.assertFalse(stock.isStatus());
+        assertFalse(stock.isStatus());
 
-        Mockito.verify(stockRepository).save(stock);
     }
 
     @Test
-    void toggleStatusNotFoundTest() {
-        Mockito.when(stockRepository.findById(1L)).thenReturn(Optional.empty());
+    void toggleStatusFalseTrue() {
 
-        ResourceNotFoundException ex = Assertions.assertThrows(ResourceNotFoundException.class, () -> stockService.toggleStatus(1L));
+        Stock stock = stock();
 
-        Assertions.assertEquals("Stock with id '1' not found", ex.getMessage());
+        stock.setStatus(false);
 
-        Mockito.verify(stockRepository, Mockito.never()).save(any());
+        when(stockRepository.findById(STOCK_ID)).thenReturn(Optional.of(stock));
+
+        service.toggleStatus(STOCK_ID);
+
+        assertTrue(stock.isStatus());
+
+        verify(stockRepository).save(stock);
+
     }
+
+    @Test
+    void toggleStatusNotFound() {
+
+        when(stockRepository.findById(STOCK_ID)).thenReturn(Optional.empty());
+
+        assertThrows(ResourceNotFoundException.class, () -> service.toggleStatus(STOCK_ID));
+
+    }
+
 }
